🚧 init nostr client

--- a/.env.example
+++ b/.env.example
@@ -274,3 +274,11 @@ AWS_S3_UPLOAD_PATH=
 
 # Deepgram
 DEEPGRAM_API_KEY=
+
+# Nostr
+# The list of relays to connect to.
+NOSTR_RELAYS=
+# Nostr Private Key (starts with nsec)
+NOSTR_NSEC_KEY=
+# Nostr Public Key (starts with npub)
+NOSTR_NPUB_KEY=
